bases/gatus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
  labels:
    app: gatus
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: gatus
  type: ClusterIP
