bases/gatus/gatus.yaml
---
# Source: gatus/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
  labels:
    helm.sh/chart: gatus-1.0.0
    app.kubernetes.io/name: gatus
    app.kubernetes.io/instance: gatus
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: gatus
    app.kubernetes.io/instance: gatus
---
# Source: gatus/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  namespace: gatus
  labels:
    helm.sh/chart: gatus-1.0.0
    app.kubernetes.io/name: gatus
    app.kubernetes.io/instance: gatus
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gatus
      app.kubernetes.io/instance: gatus
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gatus
        app.kubernetes.io/instance: gatus
    spec:
      containers:
        - name: gatus
          image: "quay.io/rhn-support-gong/gatus:v5.35.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: config-volume
              mountPath: /config/config.yaml
              subPath: config.yaml
            - name: data-volume
              mountPath: /data
      volumes:
        - name: config-volume
          configMap:
            name: gatus-config
        - name: data-volume
          persistentVolumeClaim:
            claimName: gatus-data
---
# Source: gatus/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gatus
  namespace: gatus
  labels:
    helm.sh/chart: gatus-1.0.0
    app.kubernetes.io/name: gatus
    app.kubernetes.io/instance: gatus
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: gatus
    weight: 100
  wildcardPolicy: None
