bases/gatus/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gatus
  labels:
    app: gatus
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: gatus
